# distributed_sddmm

./: .gitignore  15D.cpp  15D.h  15D_dense_shift.hpp  15D_mdense_bcast.hpp  15D_mdense_shift.hpp  15D_mdense_shift_striped.hpp  15D_sparse.cpp  15D_sparse.h  15D_sparse.hpp  15D_sparse_shift.hpp  15d.cpp  25D_cannon_dense.hpp  25D_cannon_sparse.hpp  25D_mdense_nostage.hpp  25D_sparse.cpp  25D_sparse.hpp  25D_sparse_stripe.cpp  25d_cannon_dense.hpp  2D.cpp  2D.h  2D_cannon.hpp  3D.cpp  3D.h  CMakeLists.txt  FlexibleGrid.hpp  ParIOTest.cpp  README.md  SpmatLocal.hpp  als_conjugate_gradients.cpp  als_conjugate_gradients.h  bench_erdos_renyi.cpp  bench_file.cpp  bench_heatmap.cpp  benchmark_dist.cpp  benchmark_dist.h  benchmark_dist.hpp  benchmark_fusion.cpp  common.cpp  common.h  (+36 more)
petsc_baseline/: ConvertMtxToPetsc.py  README.md  baseline_jobscript  conversion_jobscript  spmm_test.cpp
